# percepcion-control-ros2-tfg

./: README.md
.images/: IMG_6759 2.HEIC
bilbotiks_ws/: README.md
bilbotiks_ws/src/bilbotiks_controller/: package.xml  setup.cfg  setup.py
bilbotiks_ws/src/bilbotiks_controller/bilbotiks_controller/: controller_node_backup.py  gidatze_proba_wrapper copy.py  gidatze_proba_wrapper.py  gidatze_proba_wrapper_FALLO_ALIMENTACION.py  imu.py  imu_sim.py  kamera.py  kamera_sub.py  kontrol_proba_wrapper.py  lidar.py  motorrak_roboclaw.py  pertzepzio_proba.py  pertzepzio_proba_wrapper.py  servoak.py
bilbotiks_ws/src/bilbotiks_controller/config/: params.yaml
bilbotiks_ws/src/bilbotiks_controller/launch/: bilbotiks.launch.py  gidatzea.py  kontrola.py  pertzepzioa.py
bilbotiks_ws/src/bilbotiks_controller/msg/: CustomImu.msg
bilbotiks_ws/src/bilbotiks_interfazeak/: CMakeLists.txt  package.xml
bilbotiks_ws/src/bilbotiks_interfazeak/action/: Bira360.action
bilbotiks_ws/src/bilbotiks_interfazeak/msg/: Aurpegia.msg  Kontrola.msg  LidarPuntua.msg  MotorrakMugitu.msg  Pertzepzioa.msg  ServoakMugitu.msg
bilbotiks_ws/src/bilbotiks_interfazeak/srv/: Argazkia.srv  KoloreaZenbakia.srv
bilbotiks_ws/src/bilbotiks_pantaila/: MANIFEST.in  package.xml  setup.cfg  setup.py
bilbotiks_ws/src/bilbotiks_pantaila/bilbotiks_pantaila/: aurpegia.py  kamera.py  kontrola.py  pertzepzioa.py  pertzepzioa_v0.py
bilbotiks_ws/src/bilbotiks_pantaila/config/: params.yaml
bilbotiks_ws/src/bilbotiks_pantaila/launch/: bilbotiks.launch.py
docs/: README.md  clonar_rpi_sd.md  cnn.md  orbbec_install.md  ydlidar_install.md
matlab/: README.md
matlab/cnn/: dibujarGraficasCNN.m  metricas.csv
matlab/control_p_pd/: dibujarGraficasControl.m
matlab/control_p_pd/csv/: performance_0205_1.0_0.0_0.0_20.csv  performance_0205_100.0_0.0_0.0_20.csv  performance_0205_100.0_0.0_25.0_20.csv  performance_0205_100.0_0.0_25.0_30.csv  performance_0205_150.0_0.0_0.0_20.csv  performance_0205_150.0_0.0_10.0_20.csv  performance_0205_150.0_0.0_10.0_30.csv  performance_0205_150.0_0.0_25.0_20.csv  performance_0205_150.0_0.0_25.0_30.csv  performance_0205_200.0_0.0_0.0_20.csv  performance_0205_200.0_0.0_10.0_20.csv  performance_0205_200.0_0.0_10.0_30.csv  performance_0205_200.0_0.0_25.0_20.csv  performance_0205_200.0_0.0_25.0_30.csv  performance_0205_22.5_100.0_0.0_25.0_20.csv  performance_0205_22.5_100.0_0.0_25.0_30.csv  performance_0205_22.5_100.0_0.0_25.0_40.csv  performance_0205_22.5_100.0_0.0_25.0_50.csv  performance_0205_22.5_100.0_0.0_40.0_50.csv  performance_0205_22.5_150.0_0.0_25.0_40.csv  performance_0205_22.5_50.0_0.0_25.0_50.csv  performance_0205_22.5_50.0_0.0_40.0_50.csv  performance_0205_22.5_50.0_0.0_55.0_50.csv  performance_0205_22.5_80.0_0.0_25.0_50.csv  performance_0205_250.0_0.0_0.0_30.csv  performance_0205_300.0_0.0_0.0_20.csv  performance_0205_350.0_0.0_0.0_20.csv  performance_0205_50.0_0.0_0.0_20.csv
otros/: README.md
otros/keyboard/: touchdown.py
sim_gazeboHarmonic/: README.md  run.sh
sim_gazeboHarmonic/.images/: video_gz.webm
sim_gazeboHarmonic/sim_gazeboHarmonic_ws/src/corridor/: CMakeLists.txt  package.xml
sim_gazeboHarmonic/sim_gazeboHarmonic_ws/src/corridor/src/: corridor_follow.cc  corridor_follow_robot.sdf
