<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bilbotiks_controller</name>
  <version>0.0.1</version>
  <description>Roverra kontrolatzeko paketea</description>
  <maintainer email="javierarambarricalvo@gmail.com">bilbotiks</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

<!-- Dependencias de ROS 2 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend> <!-- Si usas tipos base como uint8 -->

  <!-- Dependencias de tu propio paquete -->
  <depend>bilbotiks_interfazeak</depend> <!-- Incluye tus mensajes y acciones -->

  <!-- Dependencias de terceros -->
  <exec_depend>roboclaw_3</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
